--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <nav>
-        <a href="webstudio">WEBSTUDIO</a>
+        <a href="webstudio" class="logo-link"> <span>WEB</span>STUDIO</a>
 
         <ul class="main-header-menu">
           <li class="main-header-menu-item">
