--- a/index.html
+++ b/index.html
@@ -6,38 +6,48 @@
     <meta name="description" content="Webstudio website" />
     <title>Homework 2</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css"/>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="webstudio" class="logo-link"> <span>WEB</span>STUDIO</a>
+        <a href="index.html" class="logo-link-header state">
+          <span class="web-header">WEB</span>STUDIO</a
+        >
 
         <ul class="main-header-menu">
           <li class="main-header-menu-item">
-            <a class="main-header-menu-link active" href="#studio">Studio</a>
+            <a class="main-header-menu-link active state" href="index.html"
+              >Studio</a
+            >
           </li>
           <li class="main-header-menu-item">
-            <a class="main-header-menu-link" href="#portfolio">Porfolio</a>
+            <a class="main-header-menu-link state" href="portfolio.html"
+              >Portfolio</a
+            >
           </li>
           <li class="main-header-menu-item">
-            <a class="main-header-menu-link" href="#contacts">Contacts</a>
+            <a class="main-header-menu-link state" href="#">Contacts</a>
           </li>
         </ul>
       </nav>
 
       <ul class="main-header-ctas">
         <li class="maid-header-ctas-item">
-          <a href="mailto:info@devstudio.com" class="main-header-ctas-link"
+          <a
+            href="mailto:info@devstudio.com"
+            class="main-header-ctas-link state"
             >info@devstudio.com</a
           >
         </li>
         <li class="maid-header-ctas-item">
-          <a href="tel:+11 (000) 111-11-11" class="main-header-ctas-link"
+          <a href="tel:+11 (000) 111-11-11" class="main-header-ctas-link state"
             >+11 (000) 111-11-11</a
           >
         </li>
@@ -49,33 +59,33 @@
       <section class="order-studio">
         <h1>Effective Solutions<br />for Your Business</h1>
 
-        <button class="main-button" type="button">Order Service</button>
+        <button class="main-button state" type="button">Order Service</button>
       </section>
 
-      <section class="porfolio">
-        <ul class="portfolio-menu">
-          <li class="porfolio-menu-item">
+      <section class="benefits">
+        <ul class="benefits-menu">
+          <li class="benefits-menu-item">
             <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li class="porfolio-menu-item">
+          <li class="benefits-menu-item">
             <h3>Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li class="porfolio-menu-item">
+          <li class="benefits-menu-item">
             <h3>Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li class="porfolio-menu-item">
+          <li class="benefits-menu-item">
             <h3>Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
@@ -84,20 +94,20 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="what-we-do">
         <h2>What Are We Doing</h2>
-        <ul class="porfolio-images">
-          <li class="portfolio-images-list">
+        <ul class="what-we-do-images">
+          <li class="what-we-do-images-list">
             <img
               src="images/monitor.jpg"
               alt="computer monitor"
               width="360px"
             />
           </li>
-          <li class="portfolio-images-list">
+          <li class="what-we-do-images-list">
             <img src="images/phone.jpg" alt="smart phone" width="360px" />
           </li>
-          <li class="portfolio-images-list">
+          <li class="what-we-do-images-list">
             <img
               src="images/phone-laptop.jpg"
               alt="smart phone and laptop"
@@ -107,25 +117,25 @@
         </ul>
       </section>
 
-      <section class="team">
+      <section class="our-team">
         <h2>Our Team</h2>
-        <ul class="team-images">
-          <li class="team images list">
+        <ul class="our-team-images">
+          <li class="our-team-images-list">
             <img src="images/mark.jpg" alt="mark photo" width="264px" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
-          <li class="team images list">
+          <li class="our-team-images-list">
             <img src="images/tom.jpg" alt="tom photo" width="264px" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
-          <li class="team images list">
+          <li class="our-team-images-list">
             <img src="images/camila.jpg" alt="camila photo" width="264px" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
-          <li class="team images list">
+          <li class="our-team-images-list">
             <img src="images/daniel.jpg" alt="daniel photo" width="264px" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
@@ -136,7 +146,9 @@
     <!-- End of main section -->
 
     <footer>
-      <a href="webstudio">WEBSTUDIO</a>
+      <a href="index.html" class="logo-link-footer state">
+        <span class="web-footer">WEB</span>STUDIO</a
+      >
       <p>
         Increase the flow of customers and<br />sales for your business with
         digital<br />marketing & growth solutions.
