--- a/index.html
+++ b/index.html
@@ -17,37 +17,31 @@
   <body>
     <header>
       <nav>
-        <a href="index.html" class="logo-link-header state">
-          <span class="web-header">WEB</span>STUDIO</a
-        >
+        <a href="index.html" class="logo link">
+          <span class="logo-web">WEB</span><span class="logo-studio-nav">STUDIO</span>
+        </a>
 
-        <ul class="main-header-menu">
-          <li class="main-header-menu-item">
-            <a class="main-header-menu-link active state" href="index.html"
-              >Studio</a
-            >
+        <ul class="list">
+          <li class="list-item">
+            <a class="link active state" href="index.html">Studio</a>
           </li>
-          <li class="main-header-menu-item">
-            <a class="main-header-menu-link state" href="portfolio.html"
-              >Portfolio</a
-            >
+          <li class="list-item">
+            <a class="link state" href="portfolio.html">Portfolio</a>
           </li>
-          <li class="main-header-menu-item">
-            <a class="main-header-menu-link state" href="#">Contacts</a>
+          <li class="list-item">
+            <a class="link state" href="#">Contacts</a>
           </li>
         </ul>
       </nav>
 
-      <ul class="main-header-ctas">
+      <ul class="list">
         <li class="maid-header-ctas-item">
-          <a
-            href="mailto:info@devstudio.com"
-            class="main-header-ctas-link state"
+          <a href="mailto:info@devstudio.com" class="link state"
             >info@devstudio.com</a
           >
         </li>
         <li class="maid-header-ctas-item">
-          <a href="tel:+11 (000) 111-11-11" class="main-header-ctas-link state"
+          <a href="tel:+11 (000) 111-11-11" class="link state"
             >+11 (000) 111-11-11</a
           >
         </li>
@@ -56,36 +50,36 @@
     <!-- End of header section -->
 
     <main>
-      <section class="order-studio">
-        <h1>Effective Solutions<br />for Your Business</h1>
+      <section class="hero bg-dark">
+        <h1 class="hero-text">Effective Solutions<br />for Your Business</h1>
 
-        <button class="main-button state" type="button">Order Service</button>
+        <button class="hero-btn state" type="button">Order Service</button>
       </section>
 
       <section class="benefits">
-        <ul class="benefits-menu">
-          <li class="benefits-menu-item">
+        <ul class="list">
+          <li class="list-item">
             <h3>Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li class="benefits-menu-item">
+          <li class="list-item">
             <h3>Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li class="benefits-menu-item">
+          <li class="list-item">
             <h3>Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li class="benefits-menu-item">
+          <li class="list-item">
             <h3>Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
@@ -145,11 +139,11 @@
     </main>
     <!-- End of main section -->
 
-    <footer>
-      <a href="index.html" class="logo-link-footer state">
-        <span class="web-footer">WEB</span>STUDIO</a
-      >
-      <p>
+    <footer class="bg-dark">
+      <a href="index.html" class="logo link">
+        <span class="logo-web">WEB</span><span class="logo-studio-footer">STUDIO</span>
+      </a>
+      <p class="footer-text">
         Increase the flow of customers and<br />sales for your business with
         digital<br />marketing & growth solutions.
       </p>
