--- a/index.html
+++ b/index.html
@@ -16,32 +16,31 @@
   </head>
   <body>
     <header>
-      <nav>
-        <a href="index.html" class="logo link">
+      <a href="index.html" class="logo link">
           <span class="logo-web">WEB</span><span class="logo-studio-nav">STUDIO</span>
         </a>
-
+      <nav>
         <ul class="list">
-          <li class="list-item">
-            <a class="link active state" href="index.html">Studio</a>
+          <li>
+            <a class="link nav-link active" href="index.html">Studio</a>
           </li>
-          <li class="list-item">
-            <a class="link state" href="portfolio.html">Portfolio</a>
+          <li>
+            <a class="link nav-link" href="portfolio.html">Portfolio</a>
           </li>
-          <li class="list-item">
-            <a class="link state" href="#">Contacts</a>
+          <li>
+            <a class="link nav-link" href="#">Contacts</a>
           </li>
         </ul>
       </nav>
 
       <ul class="list">
-        <li class="maid-header-ctas-item">
-          <a href="mailto:info@devstudio.com" class="link state"
+        <li>
+          <a href="mailto:info@devstudio.com" class="link contacts"
             >info@devstudio.com</a
           >
         </li>
-        <li class="maid-header-ctas-item">
-          <a href="tel:+11 (000) 111-11-11" class="link state"
+        <li>
+          <a href="tel:+11 (000) 111-11-11" class="link contacts"
             >+11 (000) 111-11-11</a
           >
         </li>
@@ -53,55 +52,56 @@
       <section class="hero bg-dark">
         <h1 class="hero-text">Effective Solutions<br />for Your Business</h1>
 
-        <button class="hero-btn state" type="button">Order Service</button>
+        <button class="hero-btn" type="button">Order Service</button>
       </section>
 
-      <section class="benefits">
+      <section class="about">
         <ul class="list">
-          <li class="list-item">
+          <li>
             <h3>Strategy</h3>
-            <p>
+            <p class="p-dark">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li class="list-item">
+          <li>
             <h3>Punctuality</h3>
-            <p>
+            <p class="p-dark">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li class="list-item">
+          <li>
             <h3>Diligence</h3>
-            <p>
+            <p class="p-dark">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li class="list-item">
+          <li>
             <h3>Technologies</h3>
-            <p>
+            <p class="p-dark">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section class="what-we-do">
-        <h2>What Are We Doing</h2>
-        <ul class="what-we-do-images">
-          <li class="what-we-do-images-list">
+
+      <section>
+        <h2 class="section-title">What Are We Doing</h2>
+        <ul class="list">
+          <li>
             <img
               src="images/monitor.jpg"
               alt="computer monitor"
               width="360px"
             />
           </li>
-          <li class="what-we-do-images-list">
+          <li>
             <img src="images/phone.jpg" alt="smart phone" width="360px" />
           </li>
-          <li class="what-we-do-images-list">
+          <li>
             <img
               src="images/phone-laptop.jpg"
               alt="smart phone and laptop"
@@ -111,28 +111,28 @@
         </ul>
       </section>
 
-      <section class="our-team">
-        <h2>Our Team</h2>
-        <ul class="our-team-images">
-          <li class="our-team-images-list">
+      <section class="team">
+        <h2 class="section-title">Our Team</h2>
+        <ul class="list">
+          <li>
             <img src="images/mark.jpg" alt="mark photo" width="264px" />
             <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <p class="p-dark">Product Designer</p>
           </li>
-          <li class="our-team-images-list">
+          <li>
             <img src="images/tom.jpg" alt="tom photo" width="264px" />
             <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <p class="p-dark">Frontend Developer</p>
           </li>
-          <li class="our-team-images-list">
+          <li>
             <img src="images/camila.jpg" alt="camila photo" width="264px" />
             <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <p class="p-dark">Marketing</p>
           </li>
-          <li class="our-team-images-list">
+          <li>
             <img src="images/daniel.jpg" alt="daniel photo" width="264px" />
             <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <p class="p-dark">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -141,7 +141,8 @@
 
     <footer class="bg-dark">
       <a href="index.html" class="logo link">
-        <span class="logo-web">WEB</span><span class="logo-studio-footer">STUDIO</span>
+        <span class="logo-web">WEB</span
+        ><span class="logo-studio-footer">STUDIO</span>
       </a>
       <p class="footer-text">
         Increase the flow of customers and<br />sales for your business with
