--- a/index.html
+++ b/index.html
@@ -15,23 +15,26 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <a href="index.html" class="logo link">
-          <span class="logo-web">WEB</span><span class="logo-studio-nav">STUDIO</span>
+    <header class="container d-flex header">
+      <div class="d-flex">
+        <a href="index.html" class="logo link">
+          <span class="logo-web">WEB</span
+          ><span class="logo-studio-nav">STUDIO</span>
         </a>
-      <nav>
-        <ul class="list">
-          <li>
-            <a class="link nav-link active" href="index.html">Studio</a>
-          </li>
-          <li>
-            <a class="link nav-link" href="portfolio.html">Portfolio</a>
-          </li>
-          <li>
-            <a class="link nav-link" href="#">Contacts</a>
-          </li>
-        </ul>
-      </nav>
+        <nav>
+          <ul class="list">
+            <li>
+              <a class="link nav-link active" href="index.html">Studio</a>
+            </li>
+            <li>
+              <a class="link nav-link" href="portfolio.html">Portfolio</a>
+            </li>
+            <li>
+              <a class="link nav-link" href="#">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
 
       <ul class="list">
         <li>
